@@ -1,5 +1,7 @@
 LIST OF CHANGES FOR NPG-QC PACKAGE
 
+ - update link to picard in POD
+
  - give LIMs time to process posting qc outcomes as individual events
  - SeqQC
    - upgrading bcviz to 1.3.1 from 1.3.0 (individual minified files)
